--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -1,28 +1,39 @@
 #MicroXplorer Configuration settings - do not modify
+CAN.BS1=CAN_BS1_9TQ
+CAN.BS2=CAN_BS2_8TQ
+CAN.CalculateTimeQuantum=4000.0
+CAN.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2
+CAN.Prescaler=32
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F0
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP0=CAN
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PB14
-Mcu.Pin1=PA9
-Mcu.Pin2=PA10
-Mcu.Pin3=PB6
-Mcu.Pin4=PB7
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.PinsNb=6
+Mcu.Pin0=PA2
+Mcu.Pin1=PA3
+Mcu.Pin2=PB14
+Mcu.Pin3=PA9
+Mcu.Pin4=PA10
+Mcu.Pin5=PA11
+Mcu.Pin6=PA12
+Mcu.Pin7=PB6
+Mcu.Pin8=PB7
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
 MxCube.Version=6.0.0
 MxDb.Version=DB.6.0.0
+NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -31,6 +42,14 @@ NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.Mode=Master
+PA11.Signal=CAN_RX
+PA12.Mode=Master
+PA12.Signal=CAN_TX
+PA2.Locked=true
+PA2.Signal=GPXTI2
+PA3.Locked=true
+PA3.Signal=GPXTI3
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB14.Locked=true
@@ -69,15 +88,28 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true
+RCC.AHBFreq_Value=8000000
+RCC.APB1Freq_Value=8000000
+RCC.APB1TimFreq_Value=8000000
 RCC.CECFreq_Value=32786.88524590164
+RCC.FCLKCortexFreq_Value=8000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=8000000
 RCC.HSICECFreq_Value=32786.88524590164
-RCC.IPParameters=CECFreq_Value,FamilyName,HSICECFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,TimSysFreq_Value,VCOOutput2Freq_Value
+RCC.I2SFreq_Value=8000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,SYSCLKFreq_VALUE,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=8000000
 RCC.PLLCLKFreq_Value=16000000
 RCC.PLLMCOFreq_Value=16000000
+RCC.SYSCLKFreq_VALUE=8000000
 RCC.TimSysFreq_Value=8000000
+RCC.USART1Freq_Value=8000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
