--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -25,16 +25,28 @@ Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
-Mcu.Pin10=VP_SYS_VS_tim3
-Mcu.Pin2=PB14
-Mcu.Pin3=PA9
-Mcu.Pin4=PA10
-Mcu.Pin5=PA11
-Mcu.Pin6=PA12
-Mcu.Pin7=PB6
-Mcu.Pin8=PB7
-Mcu.Pin9=VP_FREERTOS_VS_CMSIS_V2
-Mcu.PinsNb=11
+Mcu.Pin10=PB15
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PA15
+Mcu.Pin16=PB3
+Mcu.Pin17=PB4
+Mcu.Pin18=PB5
+Mcu.Pin19=PB6
+Mcu.Pin2=PA4
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin22=VP_SYS_VS_tim3
+Mcu.Pin3=PA5
+Mcu.Pin4=PB0
+Mcu.Pin5=PB1
+Mcu.Pin6=PB2
+Mcu.Pin7=PB10
+Mcu.Pin8=PB11
+Mcu.Pin9=PB14
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
@@ -63,14 +75,66 @@ PA12.GPIOParameters=GPIO_PuPd
 PA12.GPIO_PuPd=GPIO_PULLDOWN
 PA12.Mode=Master
 PA12.Signal=CAN_TX
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=TEMP1
+PA15.Locked=true
+PA15.Signal=GPIO_Input
 PA2.Locked=true
 PA2.Signal=GPXTI2
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=TEMP2
 PA3.Locked=true
 PA3.Signal=GPXTI3
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=TEMP SOC
+PA4.Locked=true
+PA4.Signal=GPIO_Input
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=BMS_ALARM_OUT
+PA5.Locked=true
+PA5.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=BMS_ID_0
+PB0.Locked=true
+PB0.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=BMS_ID_1
+PB1.Locked=true
+PB1.Signal=GPIO_Input
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=BMS_ID_3
+PB10.Locked=true
+PB10.Signal=GPIO_Input
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=BQ_ALERT
+PB11.Locked=true
+PB11.Signal=GPXTI11
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=LED0
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=LED1
+PB15.Locked=true
+PB15.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=BMS_ID_2
+PB2.Locked=true
+PB2.Signal=GPIO_Input
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=TEMP3
+PB3.Locked=true
+PB3.Signal=GPIO_Input
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=TEMP4
+PB4.Locked=true
+PB4.Signal=GPIO_Input
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=TEMP5
+PB5.Locked=true
+PB5.Signal=GPIO_Input
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
@@ -124,6 +188,8 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI48
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
