--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -6,9 +6,10 @@ CAN.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2,RFLM,Mode
 CAN.Mode=CAN_MODE_LOOPBACK
 CAN.Prescaler=48
 CAN.RFLM=ENABLE
-FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE
+FREERTOS.HEAP_NUMBER=1
+FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,HEAP_NUMBER
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.configTOTAL_HEAP_SIZE=800
+FREERTOS.configTOTAL_HEAP_SIZE=700
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
