--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -6,22 +6,17 @@ CAN.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2,RFLM,Mode
 CAN.Mode=CAN_MODE_LOOPBACK
 CAN.Prescaler=48
 CAN.RFLM=ENABLE
-FREERTOS.HEAP_NUMBER=1
-FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,HEAP_NUMBER
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.configTOTAL_HEAP_SIZE=700
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F0
 Mcu.IP0=CAN
-Mcu.IP1=FREERTOS
-Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA2
@@ -38,8 +33,7 @@ Mcu.Pin18=PB5
 Mcu.Pin19=PB6
 Mcu.Pin2=PA4
 Mcu.Pin20=PB7
-Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin22=VP_SYS_VS_tim3
+Mcu.Pin21=VP_SYS_VS_tim3
 Mcu.Pin3=PA5
 Mcu.Pin4=PB0
 Mcu.Pin5=PB1
@@ -47,23 +41,20 @@ Mcu.Pin6=PB2
 Mcu.Pin7=PB10
 Mcu.Pin8=PB11
 Mcu.Pin9=PB14
-Mcu.PinsNb=23
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
 MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
-NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-NVIC.SavedPendsvIrqHandlerGenerated=true
-NVIC.SavedSvcallIrqHandlerGenerated=true
-NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TimeBase=TIM3_IRQn
 NVIC.TimeBaseIP=TIM3
 PA10.Mode=Asynchronous
@@ -197,8 +188,6 @@ SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
-VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim3.Mode=TIM3
 VP_SYS_VS_tim3.Signal=SYS_VS_tim3
 board=custom
