--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 CAN.BS1=CAN_BS1_9TQ
 CAN.BS2=CAN_BS2_8TQ
-CAN.CalculateTimeQuantum=1000.0
+CAN.CalculateTimeQuantum=8000.0
 CAN.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2,RFLM,Mode
 CAN.Mode=CAN_MODE_LOOPBACK
 CAN.Prescaler=8
@@ -167,22 +167,23 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_WWDG_Init-WWDG-false-HAL-true
-RCC.AHBFreq_Value=8000000
-RCC.APB1Freq_Value=8000000
-RCC.APB1TimFreq_Value=8000000
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV8
+RCC.AHBFreq_Value=1000000
+RCC.APB1Freq_Value=1000000
+RCC.APB1TimFreq_Value=1000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.FCLKCortexFreq_Value=8000000
+RCC.FCLKCortexFreq_Value=1000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=8000000
+RCC.HCLKFreq_Value=1000000
 RCC.HSICECFreq_Value=32786.88524590164
 RCC.I2SFreq_Value=8000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,SYSCLKFreq_VALUE,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,SYSCLKFreq_VALUE,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=8000000
 RCC.PLLCLKFreq_Value=16000000
 RCC.PLLMCOFreq_Value=16000000
 RCC.SYSCLKFreq_VALUE=8000000
-RCC.TimSysFreq_Value=8000000
-RCC.USART1Freq_Value=8000000
+RCC.TimSysFreq_Value=1000000
+RCC.USART1Freq_Value=1000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI11.0=GPIO_EXTI11
 SH.GPXTI11.ConfNb=1
