--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -1,11 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
-CAN.BS1=CAN_BS1_9TQ
-CAN.BS2=CAN_BS2_8TQ
-CAN.CalculateTimeQuantum=8000.0
-CAN.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2,RFLM,Mode
-CAN.Mode=CAN_MODE_LOOPBACK
-CAN.Prescaler=8
-CAN.RFLM=ENABLE
+CAN.BS1=CAN_BS1_13TQ
+CAN.BS2=CAN_BS2_2TQ
+CAN.CalculateTimeQuantum=25000.0
+CAN.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2,NART
+CAN.NART=ENABLE
+CAN.Prescaler=25
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -16,10 +15,8 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
-Mcu.IP6=TIM3
-Mcu.IP7=USART1
-Mcu.IP8=WWDG
-Mcu.IPNb=9
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA3
@@ -35,10 +32,8 @@ Mcu.Pin17=PB5
 Mcu.Pin18=PB6
 Mcu.Pin19=PB7
 Mcu.Pin2=PA5
-Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin20=VP_SYS_VS_tim2
 Mcu.Pin21=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin23=VP_WWDG_VS_WWDG
 Mcu.Pin3=PB0
 Mcu.Pin4=PB1
 Mcu.Pin5=PB2
@@ -46,7 +41,7 @@ Mcu.Pin6=PB10
 Mcu.Pin7=PB11
 Mcu.Pin8=PB14
 Mcu.Pin9=PB15
-Mcu.PinsNb=24
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=BQtest_CONST,1
 Mcu.UserName=STM32F042C6Tx
@@ -59,15 +54,15 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TimeBase=TIM2_IRQn
+NVIC.TimeBaseIP=TIM2
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.GPIOParameters=GPIO_PuPd
-PA11.GPIO_PuPd=GPIO_PULLDOWN
+PA11.Locked=true
 PA11.Mode=Master
 PA11.Signal=CAN_RX
-PA12.GPIOParameters=GPIO_PuPd
-PA12.GPIO_PuPd=GPIO_PULLDOWN
+PA12.Locked=true
 PA12.Mode=Master
 PA12.Signal=CAN_TX
 PA15.GPIOParameters=GPIO_Label
@@ -166,7 +161,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_WWDG_Init-WWDG-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV8
 RCC.AHBFreq_Value=1000000
 RCC.APB1Freq_Value=1000000
@@ -187,21 +182,11 @@ RCC.USART1Freq_Value=1000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI11.0=GPIO_EXTI11
 SH.GPXTI11.ConfNb=1
-TIM1.IPParameters=Prescaler,Period
-TIM1.Period=0xffff-1
-TIM1.Prescaler=8-1
-TIM3.IPParameters=Period,Prescaler
-TIM3.Period=0xffff-1
-TIM3.Prescaler=8-1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim2.Mode=TIM2
+VP_SYS_VS_tim2.Signal=SYS_VS_tim2
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
-VP_WWDG_VS_WWDG.Mode=WWDG_Activate
-VP_WWDG_VS_WWDG.Signal=WWDG_VS_WWDG
 board=custom
 isbadioc=false
