--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -1,10 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
 CAN.BS1=CAN_BS1_13TQ
 CAN.BS2=CAN_BS2_2TQ
-CAN.CalculateTimeQuantum=25000.0
-CAN.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2,NART
-CAN.NART=ENABLE
-CAN.Prescaler=25
+CAN.CalculateTimeQuantum=1000.0
+CAN.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2,RFLM,Mode
+CAN.Mode=CAN_MODE_LOOPBACK
+CAN.Prescaler=1
+CAN.RFLM=ENABLE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -14,119 +15,76 @@ Mcu.IP1=I2C1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PA3
-Mcu.Pin1=PA4
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA15
-Mcu.Pin15=PB3
-Mcu.Pin16=PB4
-Mcu.Pin17=PB5
-Mcu.Pin18=PB6
-Mcu.Pin19=PB7
-Mcu.Pin2=PA5
-Mcu.Pin20=VP_SYS_VS_tim2
-Mcu.Pin21=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin3=PB0
-Mcu.Pin4=PB1
-Mcu.Pin5=PB2
-Mcu.Pin6=PB10
-Mcu.Pin7=PB11
-Mcu.Pin8=PB14
-Mcu.Pin9=PB15
-Mcu.PinsNb=22
+Mcu.Pin0=PB0
+Mcu.Pin1=PB1
+Mcu.Pin10=PA12
+Mcu.Pin11=PB6
+Mcu.Pin12=PB7
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin2=PB2
+Mcu.Pin3=PB10
+Mcu.Pin4=PB11
+Mcu.Pin5=PB14
+Mcu.Pin6=PB15
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA11
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=BQtest_CONST,1
+Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
 MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
-NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TimeBase=TIM2_IRQn
-NVIC.TimeBaseIP=TIM2
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.Locked=true
+PA11.GPIOParameters=GPIO_PuPd
+PA11.GPIO_PuPd=GPIO_PULLDOWN
 PA11.Mode=Master
 PA11.Signal=CAN_RX
-PA12.Locked=true
+PA12.GPIOParameters=GPIO_PuPd
+PA12.GPIO_PuPd=GPIO_PULLDOWN
 PA12.Mode=Master
 PA12.Signal=CAN_TX
-PA15.GPIOParameters=GPIO_Label
-PA15.GPIO_Label=TEMP1
-PA15.Locked=true
-PA15.Signal=GPIO_Input
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=TEMP2
-PA3.Locked=true
-PA3.Signal=GPIO_Input
-PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=TEMP_SOC
-PA4.Locked=true
-PA4.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=nALARM_Out
-PA5.Locked=true
-PA5.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=ID1
+PB0.GPIO_Label=ID0
 PB0.Locked=true
 PB0.Signal=GPIO_Input
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=ID2
+PB1.GPIO_Label=ID1
 PB1.Locked=true
 PB1.Signal=GPIO_Input
 PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=ID4
+PB10.GPIO_Label=ID3
 PB10.Locked=true
 PB10.Signal=GPIO_Input
 PB11.GPIOParameters=GPIO_Label
-PB11.GPIO_Label=cALARM_EXTI11
+PB11.GPIO_Label=CELL_ALERT
 PB11.Locked=true
-PB11.Signal=GPXTI11
-PB14.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB11.Signal=GPIO_Input
+PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LED0
-PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB14.Locked=true
-PB14.PinState=GPIO_PIN_SET
 PB14.Signal=GPIO_Output
-PB15.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=LED1
-PB15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB15.Locked=true
-PB15.PinState=GPIO_PIN_SET
 PB15.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
-PB2.GPIO_Label=ID3
+PB2.GPIO_Label=ID2
 PB2.Locked=true
 PB2.Signal=GPIO_Input
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=TEMP3
-PB3.Locked=true
-PB3.Signal=GPIO_Input
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=TEMP4
-PB4.Locked=true
-PB4.Signal=GPIO_Input
-PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=TEMP5
-PB5.Locked=true
-PB5.Signal=GPIO_Input
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
@@ -144,7 +102,7 @@ ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F042C6Tx
 ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.1
-ProjectManager.FreePins=true
+ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
@@ -161,7 +119,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV8
 RCC.AHBFreq_Value=1000000
 RCC.APB1Freq_Value=1000000
@@ -180,13 +138,9 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TimSysFreq_Value=1000000
 RCC.USART1Freq_Value=1000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.GPXTI11.0=GPIO_EXTI11
-SH.GPXTI11.ConfNb=1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-VP_SYS_VS_tim2.Mode=TIM2
-VP_SYS_VS_tim2.Signal=SYS_VS_tim2
-VP_TIM1_VS_ClockSourceINT.Mode=Internal
-VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
 isbadioc=false
