--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -57,16 +57,19 @@ PA12.Mode=Master
 PA12.Signal=CAN_TX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB0.GPIOParameters=GPIO_Label
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB0.GPIO_Label=ID0
+PB0.GPIO_PuPd=GPIO_PULLDOWN
 PB0.Locked=true
 PB0.Signal=GPIO_Input
-PB1.GPIOParameters=GPIO_Label
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB1.GPIO_Label=ID1
+PB1.GPIO_PuPd=GPIO_PULLDOWN
 PB1.Locked=true
 PB1.Signal=GPIO_Input
-PB10.GPIOParameters=GPIO_Label
+PB10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB10.GPIO_Label=ID3
+PB10.GPIO_PuPd=GPIO_PULLDOWN
 PB10.Locked=true
 PB10.Signal=GPIO_Input
 PB11.GPIOParameters=GPIO_Label
@@ -81,8 +84,9 @@ PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=LED1
 PB15.Locked=true
 PB15.Signal=GPIO_Output
-PB2.GPIOParameters=GPIO_Label
+PB2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB2.GPIO_Label=ID2
+PB2.GPIO_PuPd=GPIO_PULLDOWN
 PB2.Locked=true
 PB2.Signal=GPIO_Input
 PB6.Locked=true
