--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -19,21 +19,27 @@ Mcu.IP5=USART1
 Mcu.IPNb=6
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PB0
-Mcu.Pin1=PB1
-Mcu.Pin10=PA12
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin2=PB2
-Mcu.Pin3=PB10
-Mcu.Pin4=PB11
-Mcu.Pin5=PB14
-Mcu.Pin6=PB15
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA11
-Mcu.PinsNb=14
+Mcu.Pin0=PA3
+Mcu.Pin1=PA4
+Mcu.Pin10=PA10
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PA15
+Mcu.Pin14=PB3
+Mcu.Pin15=PB4
+Mcu.Pin16=PB5
+Mcu.Pin17=PB6
+Mcu.Pin18=PB7
+Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin2=PB0
+Mcu.Pin3=PB1
+Mcu.Pin4=PB2
+Mcu.Pin5=PB10
+Mcu.Pin6=PB11
+Mcu.Pin7=PB14
+Mcu.Pin8=PB15
+Mcu.Pin9=PA9
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
@@ -55,6 +61,18 @@ PA12.GPIOParameters=GPIO_PuPd
 PA12.GPIO_PuPd=GPIO_PULLDOWN
 PA12.Mode=Master
 PA12.Signal=CAN_TX
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=TEMP1
+PA15.Locked=true
+PA15.Signal=GPIO_Input
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=TEMP2
+PA3.Locked=true
+PA3.Signal=GPIO_Input
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=TEMP_SOC
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -89,6 +107,18 @@ PB2.GPIO_Label=ID2
 PB2.GPIO_PuPd=GPIO_PULLDOWN
 PB2.Locked=true
 PB2.Signal=GPIO_Input
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=TEMP3
+PB3.Locked=true
+PB3.Signal=GPIO_Input
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=TEMP4
+PB4.Locked=true
+PB4.Signal=GPIO_Input
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=TEMP5
+PB5.Locked=true
+PB5.Signal=GPIO_Input
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
