--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -15,8 +15,9 @@ Mcu.IP1=I2C1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP5=TIM3
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA3
@@ -32,6 +33,7 @@ Mcu.Pin17=PB6
 Mcu.Pin18=PB7
 Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PB0
+Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PB1
 Mcu.Pin4=PB2
 Mcu.Pin5=PB10
@@ -39,7 +41,7 @@ Mcu.Pin6=PB11
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PA9
-Mcu.PinsNb=20
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
@@ -172,9 +174,14 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TimSysFreq_Value=1000000
 RCC.USART1Freq_Value=1000000
 RCC.VCOOutput2Freq_Value=8000000
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.IPParameters=Prescaler,AutoReloadPreload
+TIM3.Prescaler=7
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
 isbadioc=false
