--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -15,9 +15,10 @@ Mcu.IP1=I2C1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=TIM3
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP5=TIM1
+Mcu.IP6=TIM2
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA3
@@ -25,15 +26,12 @@ Mcu.Pin1=PA4
 Mcu.Pin10=PA10
 Mcu.Pin11=PA11
 Mcu.Pin12=PA12
-Mcu.Pin13=PA15
-Mcu.Pin14=PB3
-Mcu.Pin15=PB4
-Mcu.Pin16=PB5
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin13=PB6
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PB0
-Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PB1
 Mcu.Pin4=PB2
 Mcu.Pin5=PB10
@@ -41,7 +39,7 @@ Mcu.Pin6=PB11
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PA9
-Mcu.PinsNb=21
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
@@ -53,6 +51,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.GPIOParameters=GPIO_PuPd
@@ -63,14 +62,10 @@ PA12.GPIOParameters=GPIO_PuPd
 PA12.GPIO_PuPd=GPIO_PULLDOWN
 PA12.Mode=Master
 PA12.Signal=CAN_TX
-PA15.GPIOParameters=GPIO_Label
-PA15.GPIO_Label=TEMP1
-PA15.Locked=true
-PA15.Signal=GPIO_Input
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=TEMP2
 PA3.Locked=true
-PA3.Signal=GPIO_Input
+PA3.Signal=S_TIM2_CH4
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=TEMP_SOC
 PA4.Locked=true
@@ -109,18 +104,6 @@ PB2.GPIO_Label=ID2
 PB2.GPIO_PuPd=GPIO_PULLDOWN
 PB2.Locked=true
 PB2.Signal=GPIO_Input
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=TEMP3
-PB3.Locked=true
-PB3.Signal=GPIO_Input
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=TEMP4
-PB4.Locked=true
-PB4.Signal=GPIO_Input
-PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=TEMP5
-PB5.Locked=true
-PB5.Signal=GPIO_Input
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
@@ -155,7 +138,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV8
 RCC.AHBFreq_Value=1000000
 RCC.APB1Freq_Value=1000000
@@ -174,14 +157,20 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TimSysFreq_Value=1000000
 RCC.USART1Freq_Value=1000000
 RCC.VCOOutput2Freq_Value=8000000
-TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM3.IPParameters=Prescaler,AutoReloadPreload
-TIM3.Prescaler=7
+SH.S_TIM2_CH4.0=TIM2_CH4,Input_Capture4_from_TI4
+SH.S_TIM2_CH4.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.IPParameters=AutoReloadPreload
+TIM2.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
+TIM2.ICPolarity_CH4=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
+TIM2.IPParameters=Channel-Input_Capture4_from_TI4,ICPolarity_CH4
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
 isbadioc=false
