--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -26,11 +26,12 @@ Mcu.Pin1=PA4
 Mcu.Pin10=PA10
 Mcu.Pin11=PA11
 Mcu.Pin12=PA12
-Mcu.Pin13=PB6
-Mcu.Pin14=PB7
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin13=PB3
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PB0
 Mcu.Pin3=PB1
 Mcu.Pin4=PB2
@@ -39,7 +40,7 @@ Mcu.Pin6=PB11
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PA9
-Mcu.PinsNb=18
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
@@ -64,7 +65,7 @@ PA12.Mode=Master
 PA12.Signal=CAN_TX
 PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA3.GPIO_Label=TEMP2
-PA3.GPIO_PuPd=GPIO_PULLUP
+PA3.GPIO_PuPd=GPIO_NOPULL
 PA3.Locked=true
 PA3.Signal=S_TIM2_CH4
 PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
@@ -108,6 +109,10 @@ PB2.GPIO_Label=ID2
 PB2.GPIO_PuPd=GPIO_PULLDOWN
 PB2.Locked=true
 PB2.Signal=GPIO_Input
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=TEMP3
+PB3.Locked=true
+PB3.Signal=S_TIM2_CH2
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
@@ -161,13 +166,17 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TimSysFreq_Value=1000000
 RCC.USART1Freq_Value=1000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.S_TIM2_CH2.0=TIM2_CH2,Input_Capture2_from_TI2
+SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM2_CH4.0=TIM2_CH4,Input_Capture4_from_TI4
 SH.S_TIM2_CH4.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.IPParameters=AutoReloadPreload
+TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM2.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
+TIM2.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
 TIM2.ICPolarity_CH4=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
-TIM2.IPParameters=Channel-Input_Capture4_from_TI4,ICPolarity_CH4
+TIM2.IPParameters=Channel-Input_Capture4_from_TI4,ICPolarity_CH4,Channel-Input_Capture2_from_TI2,ICPolarity_CH2
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
