--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -17,8 +17,9 @@ Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
 Mcu.IP6=TIM2
-Mcu.IP7=USART1
-Mcu.IPNb=8
+Mcu.IP7=TIM3
+Mcu.IP8=USART1
+Mcu.IPNb=9
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA3
@@ -26,13 +27,16 @@ Mcu.Pin1=PA4
 Mcu.Pin10=PA10
 Mcu.Pin11=PA11
 Mcu.Pin12=PA12
-Mcu.Pin13=PB3
-Mcu.Pin14=PB6
-Mcu.Pin15=PB7
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin13=PA15
+Mcu.Pin14=PB3
+Mcu.Pin15=PB4
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PB0
+Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PB1
 Mcu.Pin4=PB2
 Mcu.Pin5=PB10
@@ -40,7 +44,7 @@ Mcu.Pin6=PB11
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PA9
-Mcu.PinsNb=19
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
@@ -53,6 +57,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.GPIOParameters=GPIO_PuPd
@@ -63,6 +68,10 @@ PA12.GPIOParameters=GPIO_PuPd
 PA12.GPIO_PuPd=GPIO_PULLDOWN
 PA12.Mode=Master
 PA12.Signal=CAN_TX
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=TEMP1
+PA15.Locked=true
+PA15.Signal=S_TIM2_CH1_ETR
 PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA3.GPIO_Label=TEMP2
 PA3.GPIO_PuPd=GPIO_NOPULL
@@ -113,6 +122,10 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=TEMP3
 PB3.Locked=true
 PB3.Signal=S_TIM2_CH2
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=TEMP4
+PB4.Locked=true
+PB4.Signal=S_TIM3_CH1
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
@@ -147,7 +160,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV8
 RCC.AHBFreq_Value=1000000
 RCC.APB1Freq_Value=1000000
@@ -166,17 +179,27 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TimSysFreq_Value=1000000
 RCC.USART1Freq_Value=1000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
+SH.S_TIM2_CH1_ETR.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,Input_Capture2_from_TI2
 SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM2_CH4.0=TIM2_CH4,Input_Capture4_from_TI4
 SH.S_TIM2_CH4.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,Input_Capture1_from_TI1
+SH.S_TIM3_CH1.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.IPParameters=AutoReloadPreload
+TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM2.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
+TIM2.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
 TIM2.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
 TIM2.ICPolarity_CH4=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
-TIM2.IPParameters=Channel-Input_Capture4_from_TI4,ICPolarity_CH4,Channel-Input_Capture2_from_TI2,ICPolarity_CH2
+TIM2.IPParameters=Channel-Input_Capture4_from_TI4,ICPolarity_CH4,Channel-Input_Capture2_from_TI2,ICPolarity_CH2,Channel-Input_Capture1_from_TI1,ICPolarity_CH1
+TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM3.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
+TIM3.IPParameters=Channel-Input_Capture1_from_TI1,ICPolarity_CH1,Prescaler
+TIM3.Prescaler=9
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
@@ -185,5 +208,7 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
 isbadioc=false
