--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -193,7 +193,8 @@ SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,Input_Capture1_from_TI1
 SH.S_TIM3_CH1.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM1.IPParameters=AutoReloadPreload
+TIM1.IPParameters=AutoReloadPreload,Prescaler
+TIM1.Prescaler=0
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM2.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
